--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/arimo": "^4.5.9",
-    "@fontsource/jetbrains-mono": "^4.5.10",
-    "@fontsource/orbitron": "^4.5.9",
     "@fontsource/poppins": "^4.5.9",
+    "@makotot/ghostui": "^2.0.0",
     "framer-motion": "^6.5.1",
     "jetbrains-mono": "^1.0.6",
     "next": "12.2.5",
