--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/CircularMenu.js", "src/layout/About.js", "src/components/CircularItem.js", "src/components/CloseCircular.js"],
   "exclude": ["node_modules"]
 }
