--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fontsource/arimo": "^4.5.9",
     "@fontsource/poppins": "^4.5.9",
     "@makotot/ghostui": "^2.0.0",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "jetbrains-mono": "^1.0.6",
+    "js-file-download": "^0.4.12",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
